--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -2652,10 +2652,6 @@
 ### 2017/03/27 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170327/1085026/
 - <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170327/1085026/" target="_blank">【司改交鋒】何飛鵬專欄：讓法院不再是執政黨開的</a></h2><p>何飛鵬／城邦媒體集團首席執行長</p><p>陳水扁卸任總統後被判刑入獄，馬英九也在下任後，被檢察官以教唆洩密罪起訴，還有人預測馬英九還有許多涉案，未來法院將走不完，兩任總統都官司纏身，這難道是對卸任總統的政治追殺嗎？</p><p>司法界人士當然會主張，這只是巧合，他們絕對秉公處理，獨立辦案，不受外界政治力的影響。我們當然也期待他們百分之百公正，可是在目前的台灣，我們真的相信司法絕對公正，絕對獨立客觀嗎？</p><p>相信許多人不做此想，國民黨執政時，在野黨大聲指責：法院是國民黨家開的，而現在換人執政，一般大眾也可以合理懷疑，現在法院是民進黨家開的。台灣的政治與司法之間，總有千絲萬縷的糾葛，我們要期待政治與司法，橋歸橋，路歸路，彼此獨立，毫無牽連，看來還有長路要走。</p><p>現在蔡英文總統正在如火如荼的展開司法改革，我在司法改革的會議中就正式提出：如果此次司法改革能針對政治與司法的糾葛，提出具體的做法，讓司法真正完全獨立，不受政治的左右，讓老百姓能真正相信司法的公正性，那此次司法改革就已經有明確的成效。</p><p>為何切斷政治與司法的糾葛，是司法改革的重要議題？以陳水扁為例，自從判決出爐，同情陳水扁的人士就以這是執政黨對前朝總統的政治追殺為訴求，認為這是在高度政治影響下的判決，是道道地地的不公不義的判決；而反對陳水扁的人則額手稱慶，歡呼慶祝，這種兩極的對立，賠上的就是台灣司法的公信，讓老百姓如何能相信司法呢？</p><p>更何況在過去國民黨時代確實也真曾以政治力介入司法，所有人都明知其為真，而現在換人執政，民進黨也可能依樣畫葫蘆，你做初一，我就做十五，這不也是另一種轉型正義嗎？</p><p>所有面對政治與司法的糾葛，台灣社會急須要做一次明確的了斷，一刀切開連體嬰，而司法改革會議正是最佳時機。</p><p>想像中要擺脫政治的操弄，回歸司法的公正，至少有兩件事情可做：</p><p>（一）只要涉及高度政治敏感的案件，如總統、副總統、主要政黨主席、副主席所涉及的法律案件，承辦檢察官一律公開抽籤決定，而且其偵辦期間，也要維護其辦案的獨立性，排除檢察長之介入。若因故要換人承辦，也要公開抽籤，以避免有政治指派的可能。</p><p>同樣的承審的法官，也必須公開抽籤，避免政治介入指派。只要切斷政治指派，司法就可趨向公正。</p><p>（二）修法明定「妨害司法公正罪」，只要涉及敏感的政治案件，任何人都不得接觸承辦檢察官及法官，只要接觸，不論說了什麼話，做了什麼事，司法人員都可以妨害司法公正指控，而且只要司法人員感覺被影響，就可以指控，這樣才能確保政治案件偵辦過程中，不被打擾，以維持公正。</p><p>只要做到這兩點，台灣的政治與司法將有長足的進步，讓法院不再是執政黨家開的。</p><p>更多何飛鵬文章</p> #何飛鵬 #其他 #妨害司法公正罪 #政治力介入司法 #蘋果日報 #2017-03-27
 
-## articles
-### 2017/03/27 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170327/1085026/
-- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170327/1085026/" target="_blank">【司改交鋒】何飛鵬專欄：讓法院不再是執政黨開的</a></h2><p>何飛鵬／城邦媒體集團首席執行長</p><p>陳水扁卸任總統後被判刑入獄，馬英九也在下任後，被檢察官以教唆洩密罪起訴，還有人預測馬英九還有許多涉案，未來法院將走不完，兩任總統都官司纏身，這難道是對卸任總統的政治追殺嗎？</p><p>司法界人士當然會主張，這只是巧合，他們絕對秉公處理，獨立辦案，不受外界政治力的影響。我們當然也期待他們百分之百公正，可是在目前的台灣，我們真的相信司法絕對公正，絕對獨立客觀嗎？</p><p>相信許多人不做此想，國民黨執政時，在野黨大聲指責：法院是國民黨家開的，而現在換人執政，一般大眾也可以合理懷疑，現在法院是民進黨家開的。台灣的政治與司法之間，總有千絲萬縷的糾葛，我們要期待政治與司法，橋歸橋，路歸路，彼此獨立，毫無牽連，看來還有長路要走。</p><p>現在蔡英文總統正在如火如荼的展開司法改革，我在司法改革的會議中就正式提出：如果此次司法改革能針對政治與司法的糾葛，提出具體的做法，讓司法真正完全獨立，不受政治的左右，讓老百姓能真正相信司法的公正性，那此次司法改革就已經有明確的成效。</p><p>為何切斷政治與司法的糾葛，是司法改革的重要議題？以陳水扁為例，自從判決出爐，同情陳水扁的人士就以這是執政黨對前朝總統的政治追殺為訴求，認為這是在高度政治影響下的判決，是道道地地的不公不義的判決；而反對陳水扁的人則額手稱慶，歡呼慶祝，這種兩極的對立，賠上的就是台灣司法的公信，讓老百姓如何能相信司法呢？</p><p>更何況在過去國民黨時代確實也真曾以政治力介入司法，所有人都明知其為真，而現在換人執政，民進黨也可能依樣畫葫蘆，你做初一，我就做十五，這不也是另一種轉型正義嗎？</p><p>所有面對政治與司法的糾葛，台灣社會急須要做一次明確的了斷，一刀切開連體嬰，而司法改革會議正是最佳時機。</p><p>想像中要擺脫政治的操弄，回歸司法的公正，至少有兩件事情可做：</p><p>（一）只要涉及高度政治敏感的案件，如總統、副總統、主要政黨主席、副主席所涉及的法律案件，承辦檢察官一律公開抽籤決定，而且其偵辦期間，也要維護其辦案的獨立性，排除檢察長之介入。若因故要換人承辦，也要公開抽籤，以避免有政治指派的可能。</p><p>同樣的承審的法官，也必須公開抽籤，避免政治介入指派。只要切斷政治指派，司法就可趨向公正。</p><p>（二）修法明定「妨害司法公正罪」，只要涉及敏感的政治案件，任何人都不得接觸承辦檢察官及法官，只要接觸，不論說了什麼話，做了什麼事，司法人員都可以妨害司法公正指控，而且只要司法人員感覺被影響，就可以指控，這樣才能確保政治案件偵辦過程中，不被打擾，以維持公正。</p><p>只要做到這兩點，台灣的政治與司法將有長足的進步，讓法院不再是執政黨家開的。</p><p>更多何飛鵬文章</p> #何飛鵬 #其他 #司法遭政治控制 #蘋果日報 #2017-03-27
-
 # 胡博硯
 ## backgrounds
 - 學者
@@ -2744,6 +2740,14 @@
 ### 2017/03/29 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170329/1086625/
 - <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170329/1086625/" target="_blank">【司改交鋒】從兩則美國行政命令，看法治國之權力分立</a></h2><p>陳昱奉／台灣嘉義地方法院檢察署檢察官、前哈佛大學訪問學者</p><p>2017年3月15日正午，著名的夏威夷檀香山威基基海灘上，豔陽高照，遊客如織，一派歡樂氣息。然而，十餘公尺之外緊鄰海灘的皇家夏威夷酒店（Royal Hawaiian Resort）一樓餐廳內，氣氛卻稍顯嚴肅。</p><p>包括筆者以及十餘位美國州檢察總長在內的百餘名與會人士，刻正出席「美國西部州檢察長協會(CWAG)2017年主席倡議暨西太平洋檢察總長峰會」，聆聽夏威夷大學法學院山本（Eric Yamamoto）教授，以「9066號行政命令75週年—是松案的後續影響」為題，娓娓講述二戰期間，美國羅斯福總統於1942年2月19日，簽署9066號行政命令，強行將美國西海岸具有日本血統人士，送往政府集中營內統一管理的歷史悲劇與法律爭議。</p><p>當時，羅斯福總統頒布此行政命令的目的，在於防止敵國日本通過日裔美國人進行滲透，以保護美國國土和及公民安全。9066號行政命令頒布後，一共約12萬日裔人士（約70％是美國公民）被迫離開家鄉，在集中營過著被政府監視的生活。然而，有位出身加州奧克蘭的日裔美國公民是松豐三郎，拒絕進入集中營，並展開逃亡生涯，但不久之後就遭到逮捕，並經法院判處有罪。是松豐三郎認為9066號行政命令違憲，於是對美國政府提訴訟，敗訴之後一路上訴至最高法院。遺憾的是，美國聯邦最高法院於1944年，仍在「是松v.美國案（Korematsu v. United States ）」一案中，以六比三的票數，認定9066號行政命令以及有罪判決合憲。</p><p>二戰結束迄今已逾70年，我們不禁要問的是，是松豐三郎先生以及眾多日裔美國公民受此遭遇，最終有無獲得平反？</p><p>二戰結束，日本投降。生活在美國日裔族群，在遭受此不公平與不人道的對待之後，大多數選擇沈默，試圖隱去這段歷史悲傷。一直到1976年，福特總統方才正式簽署公告終止9066號行政命令，並表示歉意。1980年，卡特總統任命特別委員會，調查日裔美國人在二戰期間遭拘留的情況，其結論認為，將日裔公民移置到監獄式的集中營，顯然出於「種族偏見（race prejudice）」。 1988年，雷根總統簽署了「公民自由法案」，賠償每名尚存的被拘留者20,000美元，總額達12億美元。1998年，柯林頓總統在白宮頒發「總統自由獎章」給是松豐三郎，表彰他對人權奮鬥的貢獻。2005年3月30日，是松豐三郎辭世，享年86 歲。</p><p>事實上，夏威夷州的日裔美國公民亦屬9066號行政命令的重大受害族群，在二戰期間許多人被迫遷往美國內地的集中營。同屬日裔美國公民的山本教授，於講述此段歷史與法律爭議時，自是深刻感人。演講完畢，筆者與全體觀眾起立鼓掌致敬，但是，卻不知在同一時間，夏威夷州正經歷另一歷史時刻。就在觀眾鼓掌完畢回座時，大會主席夏威夷州檢察總長金士敬（Doug Chin），從餐廳門外緩緩地步上講台，除了向山本教授致謝外，也隨即轉身向在場與會人士報告：「夏威夷聯邦法院剛剛裁准暫停執行移民禁令！」金檢察總長語氣平和，鏗鏘簡潔，但猶如大地一聲雷，講完同時間，台下頓時響起一片歡呼與掌聲。</p><p>為何又有一道美國總統的行政命令受到如此的關注呢？</p><p>今年3月6日，美國總統川普以「防止外國恐怖主義份子入境」為由，公布了新版行政命令，並定於美國時間3月16日開始執行。相較於舊版入境禁令，兩者大致雷同，但新版將伊拉克從原先被禁止的7個國家名單中剔除，剩下伊朗、利比亞、索馬里亞、蘇丹、敘利亞和葉門等6國。然而，新版禁令卻無法因此獲得認同。</p><p>在新版禁令公布兩天之後，夏威夷州隨即於3月8日，再以新版禁令違憲，且不利該州穆斯林、觀光業與外國學生為由，向夏威夷聯邦地區法院聲請暫時禁制令，成為全美第一個挑戰川普新禁令的州政府。代表州政府提出聲請的金檢察總長指出，新版禁令換湯不換藥，仍然是以國家安全為藉口，來阻止移民、難民入境。金檢察總長更強調：「在夏威夷不存在差別待遇，而這也是夏威夷的特別之處」。所以，就在3月15日中午時分，也就是山本教授講述9066號行命令的同時，夏威夷地區聯邦法院法官華生（Derrick Watson），在聽取正反雙方意見陳述之後，針對由夏威夷州政府及當地穆斯林協會的 Ismail Elshikh 博士所共同提出，要求暫停實施川普總統所發佈的入境禁令一案做出裁決。</p><p>華生法官在43頁的裁決書中指出，川普的新版入境禁令限制學生和旅客進入夏威夷州，將造成該州的財政損失，並導致「無法挽回的傷害（irreparable harm）」。華生法官更認定，新版禁令違反美國《憲法》第一修正案有關禁止宗教歧視的意旨，蓋川普固然高舉「國家安全」大纛而頒布入境禁令，但華生法官認為，川普自參與總統大選開始，即數度提及「穆斯林禁令」等言論，新版禁令實在無法認定與宗教因素脫鉤。</p><p>筆者與金檢察總長原即相識，得知此一喜訊之後旋即上前握手致賀，只見金檢察總長眼眶泛紅，面帶微笑，靜默數秒後簡短回覆：「謝謝！」，其心中的激動不言而喻。筆者與金檢察總長結識於2015 年6月間，當時為法務部參加「全美州檢察長夏季年會」代表團成員之一，金檢察總長主動向台灣代表團問候致意，相當親切友善。2016年9月間，筆者應夏威夷州檀香山檢察署邀請，前往檀香山就性販運議題發表演說時，亦曾撥冗前往拜會金檢察總長，金檢察總長當面誠摯邀請我國法務部派員參與本次峰會，遂有此行。</p><p>金士敬檢察總長為華裔移民第二代，目前仍有親戚居住在台灣，自幼於美國西雅圖長大，取得史丹佛大學學士、夏威夷大學法學博士等學位，曾長期在檀香山檢察署擔任檢察官一職。其為人相當謙和內斂，專注公共事務，對於此一殊榮，毫不居功。金檢察總長就其身先士卒對川普新版移民禁令提出訴訟，在台灣亦廣受媒體報導一事，也感到訝異與榮幸。3月16日晚上，金檢察總長與筆者共進晚餐時，也簡要剖析其自挑戰川普移民禁令以來的心路歷程。</p><p>金檢察總長表示，暫停執行入境禁令，除了在於保障夏威夷州的利益外，更重要在於聲音的表達。司法權對於行政權應發揮制衡的功效，且應勇於採取行動，避免後續負面影響擴大。而其身為夏威夷州的檢察總長，挑戰違憲的行政命令，更是職責所必需。餐會結束，回到下榻旅館，仰望窗外的檀島夜空，無浮雲蔽月，有繁星點點，清澈而靜謐。對照電視上正轉播川普在田納西州演講，其形容夏威夷聯邦法院的裁決是「前所未有的越權（overreach）」，令美國「看起來軟弱」時，轉身迎向背後大肆歡呼民眾的畫面，兩者相較，堪稱強烈對比。</p><p>上過公民課的國人都知道，在三權分立架構下，行政、立法、司法三權互相制衡，相輔而相成。然而，在實務操作上，擁有龐大資源的行政權，卻常未給予司法權應有的尊重。更精確言之，端恃憲法、法律為本的司法權，雖是正義的最後一道防線，但也是最脆弱的防線。回顧過往，75年前的美國總統，以國家安全為由，簽署歧視特定族裔的行政命令，75年後，還是有美國總統持同樣理由，簽署類似的行政命令，只不過這次將「小日本（Japs）」換成了穆斯林。在法治國之下，我們無法期待行政權永遠不會犯錯，但每一個法治國國民，都應該有權期待，當行政權犯錯時，司法權有足夠的力量予以制衡。3月30日為是松豐三郎先生忌日，若其地下有知，看到75年後的川普入境禁令，因為金檢察總長的聲請，而被夏威夷聯邦法院裁定暫時停止執行時，或許可堪告慰吧。</p> #陳昱奉 #檢察官 #三權分立 #蘋果日報 #2017-03-29
 
+# 陳宗元
+## backgrounds
+- 檢察官
+
+## articles
+### 2017/03/29 GMT0+8:00 http://www.storm.mg/article/239514
+- <h2><a href="http://www.storm.mg/article/239514" target="_blank">陳宗元觀點：塩酥雞法學─今天我們不談死刑好嗎？</a></h2><p>司法改革國是會議第3組在3月22日的第3次會議中，會議一開始陳重言委員提出臨時動議，希望能夠將死刑存廢的議題納入該組的議程中討論，到了會議結束前，經過一番討論後，表決結果僅5人同意將死刑相關議題列入議程，其餘委員均未贊成或反對，故死刑存廢議題再度被擱置。該日會議結束後，我看到了2種對此次死刑存廢議題臨時動議的意見，第一是，該組廢死論者在佔多數的情形下，居然多數廢死論者均反對討論廢死議題。第二是，提出臨時動議並贊成的幾位委員都是法務部的代表和檢察官，這些委員既不同意增加開會次數，又欲增加死刑存廢議題，顯然是故意想要拖延議程，故意排擠特定議題進入實質討論。以上二種說法似乎都言之成理，但實情究竟如何，請容我來為各位看倌做個分析：</p><p>死刑存廢的問題，幾乎可以說是台灣新聞媒體的月經文，每次只要遇到最高刑度為死刑之案件，判決結果出爐，新聞媒體總是大篇幅報導，而這個問題也特別能夠挑動社會大眾的敏感神經。廢死論者和反廢死論者長年意見僵持不下，政府也總是小心翼翼處理死刑問題，一方面我國在簽立兩公約後，為免違反兩公約關於死刑的規定，在判決死刑的案件總是特別謹慎小心，但另一方面，基於人民法感情或輿論的壓力，法官們要決定就死刑案被告判處無期徒刑，總是必須承受排山倒海而來的批判。每每有死刑案被告獲判無期徒刑，我們總能見到輿論嘩然大批司法，導致司法信賴度大降。</p><p>而沒多久前，檢察總長就為死刑定讞的王鴻偉提出非常上訴，除了讓民眾大感失望外，連許多基層檢察官也不約而同提出質疑，認為此次以最高法院未討論王鴻偉有無教化可能而提出非常上訴，為何鄭捷案時最高法院認為死刑的目的與教化無關，無須討論教化可能，檢察總長卻未提出非常上訴，標準前後不一。更何況，死刑確實是一種永久無法回復之侵害，對於被告而言，其生命權將遭永久剝奪，我們將不再有挽回錯誤的機會，不管是基於司法信賴度的考量，或是基於對被告人權及被害人權益的考量，這樣的一個議題，誰能說不重要？</p><p>司法改革國是會議自從公布分組委員名單及分組議題以來，不斷遭人質疑分組委員名單及議題的決定有黑箱作業，其中關於死刑議題，司改國是會議籌委會副召集人也是第3組的主席瞿海源更多次表示從民眾徵得的議題，並無死刑議題存在，籌委會並未刪除死刑議題。但林鈺雄委員在第3組的第3次會議中也直言，在徵集而來的議題中，包含1024、1030、1142、1255編號等均是死刑相關議題（第3組3月22日會議錄影PART2-01:54:00），不論之前是因為故意或過失而漏列此等議題，在這個為了人民而召開的司法改革國是會議當中，現在當應即時補救，將死刑相關議題列入議程，以補全程序正當性，也才符合召開這個會議的民主正當性。</p><p>事實上，陳重言委員一開始提出臨時動議，其目的是要討論死刑存廢的問題，但是贊成的委員裡，林鈺雄委員是想要討論判決死刑前的審理程序問題，而林達委員則是想討論他之前投書所提到的法制化死緩問題。</p><p>奇妙的是，當時與會列席的許玉秀籌委表示，3月13日籌委會已經確認死刑的問題是在第5組裡面，但其後許玉秀籌委又講了一段我聽不太懂的話，她說『那我怎麼會認為死刑不談是好的事呢？但是因為那裡有一個刑罰的制度的檢討，所以我也就，就我作一個籌委，我沒有特別去提這一件事，我現在要說的是，這個標題，我不能說他不在裡面，第5組的確已經開始在討論死刑的執行程序啊，至於說標題如何，那我真的要請問副召集人，這個整個議題我記得都確定後，有一次我去司法院，司法院幕僚說陳瑞仁檢方又來了，他說那一個標題不能這樣寫、不能那樣寫，換句話說，標題要如何寫他也有很多意見，在我們已經確定之後，標題要如何寫還被改過，不是籌委會寫的』（第3組3月22日會議錄影PART2-01:48:10），這樣一段話究竟是說明除了死刑定讞後執行的問題外，其餘死刑相關議題均已經納入第5組實質討論的議題中？還是只是說明第5組有在討論死刑定讞後的執行問題，但並未有要討論其餘死刑相關議題的打算？</p><p>我們可以先看看第5組在3月2日的會議內容，其逐字稿記載，該組梁永煌主席表示『司法院可以做一個量刑準則出來，那量刑準則要考慮哪幾個因素，仿照國外。那這樣子我想已經可以作為一個政府努力的方向、政策方向，但是不是要針對死刑這個部分，我覺得可能是要再斟酌，因為廢死又是一個議題，如果我們提到死刑，恐怕又會社會反應，我想待會記者最關心的可能是這個問題。我們即使沒有這個意思，但因為溝通上並不是那麼容易，我覺得還是要注意說………我覺得是不是照剛才林委員的意見就是說……我們用……當然裡面可以像剛才余委員的意見放進去，我沒有特別……但這是我們提出綜合建議的時候其中的一項，是不是用這樣……那在子題上就不特別去臚列這個部分…再來第5個是「量刑準則的建立」，包括死刑等等的。』似乎是把死刑存廢的問題確定排除，只討論死刑量刑準則的問題。</p><p>另外，3月13日籌委會的會後紀錄，其內容為『總統府司法改革國是會議籌備委員會，今（13）日召開第5次籌備會議，會議歷時3小時，針對各分組迄今的會議召開情形、議題的增減與轉移、增開會議的處裡，進行廣泛的討論。籌備委員會確認了各分組的議題增減與轉移，第2分組對於人民甚為關切的「政治干預司法」問題，決定增列2-5「切斷政治與司法的糾葛，維持司法的中立」，並另增加2-6「設立司法政策研究機構」兩大類議題；第3分組將3-1-3「採行起訴狀一本主義（卷證不併送），並強化各法院審查庭篩檢證據之能力」，轉交給第4分組，作為4-2-1「人民參與司法：不起訴、審判之參審制與陪審制」的配套措施一併討論；第5分組重新整理了組內議題，將兒少與性別相關的司法制度新增為5-5「兒少與性別的社會安全及司法制度檢討」。籌備委員會也確認了各分組增開會議的決定，其中，針對社會大眾最為矚目的「人民參與司法」，第4分組將於3月25日（六）召開第一次增開會議，邀請學者專家與各分組委員與會；另外，為了讓所有關心此議題的公民都能及時參與，當日會議將做全程網路直播。』，完全沒有提到死刑相關議題被列入第5組內，如果這麼重要的議題被列入第5組，會後紀錄有可能完全不提嗎？</p><p>再者，在第3組3月22日該次會議中，瞿海源副召集人在林鈺雄教授表示死刑議題遭刪除後，先是表示籌委會階段沒有刪除任何議題，沒有人提到死刑議題（第3組3月22日會議錄影PART2-01:45:15），而在林鈺雄委員直接說出死刑議題的相關編號後，瞿海源副召集人又指示林主委回去將林鈺雄委員所說的資料清理一下交籌委會討論（第3組3/22會議錄影PART2-01:55:15），顯示瞿海源副召集人在3月22日仍不認為有人提過死刑相關議題，其指示還需要再確認後交籌委會討論，何可能在3月13日的籌委會已先行決定將死刑議題交給第五組？</p><p>如果確實，第5組已經把死刑存廢問題列入議程，那我認為第3組最多也只能討論林鈺雄委員及林達委員所提出關於在死刑存在的前提下，如何審理死刑案件的程序及法制化死緩的問題，畢竟這樣的問題才符合第3組權責相符高效率的司法的範圍。但如果沒有一組願意去談論死刑存廢的問題，甚至連死刑相關議題都沒有一組願意去碰，為何第3組的委員們不能在該組提臨時動議要求討論呢？</p><p>事實上，林達委員在該次會議中有說明，他贊成討論死刑議題，但是他認為即便將死刑議題排入議程，也應該在所有議題討論完後再看看剩多少時間，也就是要將死刑議題排入最後一個議程，而不是插隊（第3組3月22日會議錄影PART2-01:47:40），故所謂排擠特定議題的說法顯然無法成立。</p><p>再者，從第2次會議以後，其實第3組的討論和表決都非常順利，照這個流程走下去，其實有高度可能可以討論及表決完畢所有議題，再增加死刑相關議題其實也有時間可以討論。而且從第3組第3次開會內容，討論法官多元進用時，反而是尤柏祥委員、李佳玟委員兩人有提案，而且他們兩人的提案引起了很多討論，甚至連李佳玟委員都一度不贊成尤柏祥委員的提案，建議尤委員撤案。相反的，對於檢察官輔助人力、高檢署人力資源調配、檢察官工作量等問題，在毫無爭議的情況下，直接表決通過，以這樣的開會過程來看，實在很難說法務部和檢察官有故意拖延議程排擠特定議題，或故意造成會議空轉。</p><p>我雖然是個反廢死論者，個人比較支持林達委員提出的法制化死緩制度，但我一向很佩服廢死論者那種為了理念，雖千萬人吾往矣的勇氣。過往，廢死論因為我國民情問題而不受國家重視，廢死論者能夠宣揚理念的平台大概以學術研討會為主，難得來到了這樣一個具有高度影響力的司法改革國是會議，又在廢死論者佔多數的情形下，第3組的廢死論者部分人根本不願意加開會議，而該組的多數廢死論者均不願意討論死刑存廢議題，如果排除了為免排擠其他議題的可能性，我實在不知道，究竟是什麼樣的考量下，讓這些廢死論者願意放棄討論他們最在乎的廢死論。</p><p>但是，既然本次司法改革國是會議號稱是為人民而召開，對於人民所提出關於死刑存廢的議題豈能故意漠視之。即便無法在死刑存廢的議題上得到共識，至少做出的討論和表決都會有一定的實質影響和意義。而且，既然我們認為死刑是一個嚴肅的議題，必須謹慎為之，在死刑無法廢除前，基於人權的考量，更應該討論林鈺雄委員和林達委員所提的死刑判決前的審理程序及死刑判決後的法制化死緩，以確保在判決死刑的案件，其判決前的審理程序足夠嚴謹，並且在死刑定讞後，死囚仍有一定改過自新之機會而免死，以免如江國慶案般的悲劇再度發生。司改國是會議已經走了一半，死刑議題談或不談，涉及這個會議的程序正當性和民主正當性問題，剩下不多的時間，讓我們繼續看下去，海水退了後，究竟誰沒有穿褲子？</p><p>＊作者為台北地檢署檢察官</p> #陳宗元 #檢察官 #議事程序 #風傳媒 #2017-03-29
+
 # 戴伸峰
 ## backgrounds
 - 其他
@@ -2776,6 +2780,14 @@
 ### 2017/03/30 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170330/1087154/
 - <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170330/1087154/" target="_blank">【司改交鋒】林達專欄：廢止吸毒一罪一罰 翻修毒品條例</a></h2><p>林達／台北地檢署檢察官</p><p>吸毒犯在目前的法律實務運作下，每一次施用就是一次獨立的行為，一罪一罰，累計後刑度很重。雖然很多人覺得吸毒犯應該重判隔離，但是站在人性化的角度，還是可以重新思考一下這個做法。</p><p>大家都知道，吸毒會上癮。不同毒品有不同上癮程度，以海洛因為例，上癮的人幾乎每天都會用，安非他命則可能幾天用一次，搖頭丸可能間隔更久。吸毒犯雖然有癮，但是仍然具有選擇施用的自由意志，這是我們用《刑法》處罰他的基礎之一。但是隨著他成癮程度的升高，自由意志也在逐漸削弱，我們有必要每次都算他一罪嗎？</p><p>吸毒犯既然已經上癮，再次吸毒都是身心制約下的反覆實施行為，應該考慮用慣習犯的思維，概括性的集合認定為一罪。舉例來說，今天有兩個吸毒犯，同樣都是每天吸毒，但是一人只被查獲一次，另一人被查獲三次，前一人只判一罪，後一人卻要判三罪。判三罪的結果，刑度當然重很多。但實際上，他們的上癮程度相當，司法應該要做的是協助他們戒毒，用刑罰警惕，或者作為他戒毒的強制力後盾是可以的，但是只要判一罪就可以達到效果，何必判三罪呢？三罪加重入獄只會讓他更困頓，更沉淪地用毒品麻痺自己。如果矯正可以用經濟學邊際效益計算，早就已經是「邊際效用遞減至零」，如果入監會讓他們交叉學習犯罪的話，關愈久應該是「邊際收益遞增破表」了。</p><p>吸毒一罪一罰，更是嚴重浪費司法資源。檢察官和法官必須仔細檢查他的犯罪前科，釐清他是初犯、五年以內再犯、五年以後再犯但曾連續三犯、累犯，眼花撩亂，許多吸毒犯前科十幾頁，看到眼睛脫窗，一旦弄錯，還要趕快上訴再撤銷改判。更慘的是，判決確定以後，法院還要定執行刑，釐清各個不同判決能否合併定刑，弄錯還要非常上訴，複雜系統堪比瑞士精密鐘錶工業，我真為我國司法人員感到驕傲。</p><p>而且，吸毒犯關七個月應該夠了，足足關到兩年才出來比比皆是，也沒有人權團體或律師會幫他們爭取權益。這些刑度不斷累加的結果，就是監獄人滿為患，並排擠重刑犯的資源。長此以往，再加蓋監獄還是空間不夠。如果可以廢止吸毒一罪一罰，這些無謂程序都可以廢掉，監獄人口也可以下降，司法資源會更合理分配。</p><p>但是，這個制度若要實施，宜有周全設計。因為有問題的是，多長期間內的反覆吸毒行為，可以算作一罪？要以入監作為中斷時點嗎？緩起訴戒癮治療期間內屢次再犯，累計幾次再犯才算治療「失敗」？怎麼算都難以合理解決。關鍵在於，戒毒必須依個案彈性而定。因此，戒毒處遇建議搭配刑事程序法及毒品法庭的建立，正如同少年犯罪搭配《少年事件處理法》及少年法庭的建制一樣。</p><p>未來運作上，毒品法庭可以在審理程序中，將被告所有毒品案件都概括論以一罪，不必再核算前科和定刑，並且在徵詢檢察官和觀護人意見後，作出最適合的戒癮治療方案、監禁刑度和觀護期限。這是柔性、彈性、有效率的司法機制，這不僅更合理，也對司法效能有所提升，更可以引進衛福與社工系統，直接參與司法處遇的裁決諮詢。本次司改國是會議，希望可以評估這個建議，讓毒品的司法處遇開始出現革命性的轉變。</p><p>更多林達文章</p> #林達 #檢察官 #第五組 #毒品 #蘋果日報 #2017-03-30
 
+# 蘇永欽
+## backgrounds
+- 學者
+
+## articles
+### 2017/03/30 GMT0+8:00 https://udn.com/news/story/7340/2373296
+- <h2><a href="https://udn.com/news/story/7340/2373296" target="_blank">蘇永欽／法官的多元選任</a></h2><p>司改國是會議第三組分組會議前幾天開會也有了結果，針對法官人力不足的問題他們決議讓「定期法官」或「兼職法官」參與審判工作，至於執行的細節則再研議。從第三代司改的需求面思維來看，我認為這至少還是很有意義的討論，也是觸及司法官僚體系軟肋，從而完全交給他們一定不會有結果的改革議題。</p><p>但問題還是一樣，除了問題意識不甚清楚外，決議到底是根據什麼調查分析做出來的，看起來也不像很紮實，照報上說好像這樣就要交由幾位委員去和司法院研議「執行」細節了，這麼大一件事談笑間就做成決定，真不可思議。</p><p>如果只是人力不足，擴增考選名額當然才是正辦。找法學教授或其他專家來作定期、兼職法官，理由應該是要讓法官族群更多元吧？但多元說起來很容易，找什麼人來當法官都有利有弊，是不是真能減輕現在被詬病的所謂「恐龍法官」、「娃娃法官」問題，提議的人不能不對司法制度有最起碼的瞭解。</p><p>朋友間一談到這裡，總有人說，為什麼不學學美國，從優秀的律師裡挑法官，我如果不想多費口舌，就只反問，你告訴我哪個大陸法系國家的法官是這樣選任的？不是哪個法系好壞的問題，而是體制環環相扣的問題。為什麼美國人不改用更輕便的筷子，而要用刀叉？道理很簡單，因為他們得把整個飲食習慣都改過來。要減少科舉、科層式司法的問題，不少歐陸國家也想朝多元選任的方式調整，最後能有百分之十的改變就很不錯了。原因很多，這裡無法細說，但他們的國會絕對不會貿然做成「五年內非考試選任的法官要達到百分之八十」的決議，丟給司法院去執行。</p><p>現在這個找教授來作短期法官，專家作兼職法官的點子，先不說利弊如何，憲法的門檻就不容易跨過，包括考試任用，還有終身職保障的規定。更麻煩的是制度的配套，教授之長在其專業領域，事實審法官要會的一掛子本事是用兩年集中訓練，五年候補、一年試署練出來的，怎樣用懶人包方法讓教授們在兩個月都學會，恐怕不容易。</p><p>德國有定期法官和兼職法官沒錯，知不知道德國的教授都要先通過和法官一樣的國家考試取得任法官資格？他們絕大部分也都受過兩年的分科訓練，很早就培養這樣的基本能力。德國的「完全法律人」教育模式，投入的成本是其他國家無法想像的，所以他們有很好的條件去做多元選任，我們還差了很多。多元選任目前比較有可能做到的反而是法律審，像大法官一樣，但那裡又有很多其他的問題要克服。</p><p>我為什麼那麼害怕這種敲鑼打鼓的國是會議？因為這些人都被逼得去想一些「耳目一新」的點子，然後用來逼主管機關研商細節，十年後還要追蹤考核。十八年前的全國司改會，我尊敬的范光群律師提了民事法官合意選任的建議，匆忙間我也覺得應該可以提高民眾對司法的信任，等我到司法院工作，才真的瞭解此案不通的道理，算起來我也要為這個失敗政策背共謀造意的部分責任。但為什麼要開這樣的會議？可不可以就叫總統府的司改轟趴，大家輕鬆一點？</p><p>（作者為政治大學講座教授、司法院前副院長）</p> #蘇永欽 #學者 #第二組 #法官晉用 #UDN #2017-03-30
+
 # 許澤天
 ## backgrounds
 - 學者
@@ -2783,6 +2795,14 @@
 ## articles
 ### 2017/03/30 GMT0+8:00 http://www.storm.mg/article/240182
 - <h2><a href="http://www.storm.mg/article/240182" target="_blank">許澤天觀點：論改良式當事人主義─人民豈止期待法官消極聽訟</a></h2><p>司改大戲近來在媒體不斷上演，關乎人民對司法正義實現情感的死刑議題竟未納入討論，反倒是普羅大眾不知所以的檢察官定位爭論不停，而且被害人得否參與刑事程序這個人人都能懂的重要議題，亦遭司法院質疑是否需要法院更多的職權介入，影響改良式當事人進行主義的架構。</p><p>話說穿了，背後的想法就是某些人士熱衷的當事人主義理念，他們多年來的司改重點，或作為反對某些改革的說帖，大體上都不脫離這個價值思維。因此，檢察官必須是行政官的理由就是其乃當事人，自不能與法官合稱司法官；法官必須消極聽訟，不能主動調查，最好再配合採取起訴狀一本制度，讓法院在審判前不能接觸卷宗證物，才更能符合在當事人主義的審判中立形象，而不管案件是否需要好好準備，始能作出適當判決。</p><p>問題只在於，當事人主義的法官形象果真符合蔡總統所宣稱的「屬於人民的司法」嗎？我們是否誤解原本效法的德國法制，搞出個變相的台版職權主義？倘若找出病灶後，是否該回到繼受母國的德國法制來尋求解藥，而非尋求異種移植？法律是一個極為精密的複雜設計，牽一髮動全身，先進法治國家各自有其完整配套，法學研究上仍排不上前段的我國可否有能力自行拼裝？</p><p>根據司法院的網頁說明，大力推動刑事訴訟改行「改良式當事人進行主義」的背景在於檢察官因人力調度問題不能切實地到法庭實行公訴，加上未盡偵查能事，濫行起訴，以致負有調查義務的法院必須像檢察官一樣地主導調查與質問被告，混淆審檢的權責分際。然而，檢察官必須到庭與履行偵查職責始能起訴，原本就是法律規定的職務義務，根本無需修法強調，該增修的應只是防止其違反職務的設計。</p><p>就此問題，2002年的修法引入德國起訴審查精神（刑訴第一六一條第二項），暫且不論是否嚴謹完善，基本上算是對症下藥。然而，同年的其他修法，則將原本的法院因發現真實必要之調查證據義務，改為只適用在公平正義之維護或對被告之利益有重大關係之事項（刑訴第一六三條第二項但書），而宣稱此係考量我國的國情及歷史文化背景的「改良式當事人進行主義」。話語上聽起來，彷彿已採當事人主義，只是保留部分職權主義作為對當事人主義的改良。只是文字上新法「公平正義之維護，應依職權調查」和舊法「因發現真實之必要，應依職權調查」究竟有何不同，讓人疑惑。幾年前，最高法院101年度第2次刑事庭會議決議，扭曲文義地把法條中所謂的「公平正義之維護」限縮在有利益被告之事項為限，而引發主要來自留德背景的學界與檢察實務界的強力反彈。此一看似限制法院調查義務的典範變更，是否符合人民對法院的正義期許？又是否具有實務的可行性？著實令人懷疑。</p><p>「改良式當事人進行主義」宣稱賦與當事人聲請調查證據與詢問權利（刑訴第一六三條第一項），原本就是強制法院履行調查義務的重要手段，此在德國法上亦是如此，實在看不出有任何當事人主義或改良的意義。反倒是在立法水準上，對於當事人聲請調查的駁回基準規定得太粗略（刑訴第一六三條之二），導致法院容易忽略當事人的聲請權利。並且，法院不是偵查機關，其調查義務範圍本來就不可能、且不應如同檢警一般，從沒有證據蒐集到有充分證據，更何況依法只有檢察官在偵查中蒐集的證據，已足認被告有犯罪嫌疑時（刑訴第二五一條），法院才能受理訴訟，並進行補充性的調查；但在審理中若發現當事人顯然遺漏的證據，縱使未經當事人聲請，法院可否閉著眼睛錯失發現真實的機會，而不進行補充調查，則涉及我們對法官的期待。</p><p>亦即，一個法官可否在仍有調查證據的必要時，兩手一攤地說，「事實已明，被告有罪」，或「事實不明，被告無罪」，彷彿不是法官判被告入監，或讓被害人冤屈難伸，錯都是在檢察官或辯護人不夠盡責，這是否離民眾對法院的認知太遠了些？更何況，審判中往往出現偵查難以預料的證據，立於審判席上的法官不難發現台下當事人的舉證盲點，而要一個必須撰寫判決理由的法官不能主動澄清事實，只能靜待檢辯攻防，以形成心證，也不合理務實。</p><p>法院發現真實的意義應在於毋枉毋縱，自然不能以調查結果的有利或不利被告來決定是否調查，而應視審理中是否出現調查必要的證據情勢。舉例來說，一個發生在超商的搶案，被告提出讓法院半信半疑的不在場證明，難道法院不能主動調查檢辯雙方顯然都未注意到的超商錄影？此一澄清被告是否在現場的調查，對於真實發現有其助益，卻對真正的無罪被告有利、真正的有罪被告不利，且難以在調查前判斷有利或者不利被告。如依前述最高法院的決議，究竟是否要查？恐生疑問。因為，未必有利被告。我很擔心，懶惰畢竟是人性，法院會從省事的觀點選擇不查，再透過當事人主義的法院中立觀點，包裝自己的怠惰。若是如此，是否會因為法院的不查造成更多的被告含冤，以及更多冤屈無處可申的被害人？</p><p>很多人往往從法院調查後判決被告有罪的觀點，認為法院係與檢察官聯手打擊被告，卻忽略法院是從自主的角度發動調查，且調查亦不限於有罪事實的認定。經過檢察官的偵查篩選，絕大多數的經起訴被告都是受到有罪判決，本來就是非常合理的事情，採取當事人主義的美國與日本的有罪率，還比強調法院職權調查的德國高。因此，如果我們把重點只擺在有罪或無罪認定的事實上，根本就錯失焦點，更讓法院在決定法律效果時，恣意地不照事實認定。但是，猶如醫師對病人生命身體有保護義務，卻不等於只要病人死亡就成立醫療疏失，所以真正要處理的問題在於，如何合理地判定法院對於犯罪成立與法律效果相關事實的應調查範圍（或違反調查義務），而非把責任推給不作判決的當事人。</p><p>可惜的是，前述決議不想花功夫建立具體的法院調查義務審查基準，逕自批評法院調查事實乃是違反公平法院與無罪推定，而不知其係援用美國當事人主義理解何謂公平法院與無罪推定，再偏頗地否定源自歐陸法制的職權調查原則。</p><p>一個獨攬偵查、起訴、審判、執行權力的包青天辦案，早已受到揚棄。但包青天的廉潔正直與明察秋毫精神，卻已深植民心。人民對於法官在刑事程序的角色扮演難道只是消極聽訟，抑或應積極地扮演毋枉毋縱的角色，值得在當代法治價值與我國國情衡量中仔細思考，而不是用自我界定的無罪推定或公平法院口號來進行改革。</p><p>＊作者為成功大學法律系教</p> #許澤天 #學者 #當事人主義 #風傳媒 #2017-03-30
+
+# 雅豊斯
+## backgrounds
+- 律師
+
+## articles
+### 2017/03/30 GMT0+8:00 http://www.ettoday.net/news/20170330/894131.htm
+- <h2><a href="http://www.ettoday.net/news/20170330/894131.htm" target="_blank">雅豊斯／「有感」司改　這樣改就對了！</a></h2><p>▲木村拓哉主演的日劇《Hero》系列，描述一名僅中學畢業且行事與眾不同的檢察官，以獨特視角和洞察力探求案件真相的故事，創下收視好評。（Photo by KHMAMEO／Flickr）</p><p>文／雅豊斯</p><p>司法改革國是會議第四分組近日針對「司法文書與司法語言之改革」、「加強公民法律教育」等議題進行討論。委員謝明珠建議，可拍攝活潑的法學教材與法律戲劇等，如木村拓哉主演的日劇《HERO》系列不但創下很好的收視率，且可推廣全民法律教育。</p><p>其實司改要讓全民有感並非難事，誠如謝明珠委員的建議，不如先從「看得到」或「摸得到」的逐步改進。</p><p>若以律師的角度而言，其實只要添購一點點設備就行，例如：增加刑事法庭內的「告訴代理人席」，不要讓律師只能坐在證人席，沒有桌面又離螢幕很遠，這樣實在很難做事。如果告訴代理人可以直接坐在檢察官旁邊（每次坐了都會被檢察官趕走Q_Q），麻煩請把名牌直接貼在椅子上面（我怕貼在桌上還是有些檢座看不到），同時函文給各級法院與檢察署，通知他們這項「微乎其微」的變革，並拜託他們行行好、發揮愛心，不要再把一堆卷宗堆在桌椅上了，賞個位子唄！</p><p>再來就是增設偵查庭內辯護人及告訴代理人的「電腦螢幕」。其實律師們的要求一向不高，只要不用罰站或伸長脖子，能近距離看到螢幕上的筆錄記載就好！現在知名大廠的19型護眼螢幕一台只要2,388元，政府大量採購一定更便宜的！（沒錢？那律師也可以自備平板或筆電，你只要增添設備提供畫面分享就好啦！）</p><p>另外，麻煩請增設法庭與偵查庭內的「學習律師席」。何以學習司法官都有位子坐，但學習律師就沒有？雖然1993年跟2008年法務部曾兩度發函，認為須在偵查庭內宜增設學習律師的席位（民國82年7月19日法82檢決字第14779號函、民國97年7月22日法檢字第0970802610號函），但時光飛逝、歲月如梭，咻一下子24年過去了，當年剛出生的嬰兒現在都碩士快要畢業了，可不管是偵查庭也好、法庭也罷，說好的學習律師席，至今還是「國王的席位」。難道，賞個位子有這麼難嗎？</p><p>若再從一般民眾的角度來看司改，日前司法院的法學資料檢索系統終於增加「裁判書分享」功能，絕對是「踏出成功的第一步」，相信假以時日全民都能化身為鍵盤柯南，再也不會像現在一樣人云亦云，或是被媒體的不實報導洗腦。</p><p>若想獲得廣大女性同胞們對司法改革的認同，個人則強烈建議我國務必學習韓國的作法。</p><p>韓國的大檢察廳（相當於我國最高法院檢察署）設有「榮譽檢察官」（명예검사）制度，並任命形象健康或對國家社會有特殊貢獻者擔任，例如教授、科學家、演藝人員等擔任形象大使或代言人，肩負著參與各式公益活動、行銷檢察官使命、建立檢察官良好形象等責任。重、點、是，許多韓國非常大咖的藝人，例如金泰熙、鄭宇成、李瑞鎮和李敏鎬等，都曾經擔任過榮譽檢察官乙職，並且真的把這個職務視為一種榮譽。</p><p>▲2012年南韓4位榮譽檢察官，分別是首爾大學教授（左起）、美國MIT博士和藝人文彩媛、李敏鎬。（圖／翻攝自韓國大檢察廳）</p><p>姑且不論這個榮譽檢察官的成效如何（雖然我個人覺得好感度爆表），但至少話題性與吸睛力十足，否則各大媒體也不會大篇幅報導。畢竟，韓流魅力可是席捲整個亞洲，甚至是全世界啊！有趣的是，李敏鎬在擔任榮譽檢察官之前，才剛在韓劇《城市獵人》中，飾演一位被檢察官苦苦追捕的角色，但卻暗自提供檢察官辛苦搜集的犯罪證據，可說是地下正義的化身。2017年初，李敏鎬又在韓劇《藍色海洋的傳說》中飾演一位改邪歸正的騙子，且故事最後重回學校念書並通過司法考試，順利成為一名地檢署檢察官。由於他曾行騙多年，因此任何詐騙集團的手法都逃不過他的法眼，績效好到讓前輩心生羨慕與嫉妒。所以說，與其主張司法官必須由律師轉任，還不如多元任用（考試、轉任、甄選），如從社會大學中廣納特殊人才，再讓他們接受密集的法學訓練，也許會有意想不到的奇效。</p><p>看完韓國，反觀台灣代表隊，究竟該找誰擔任「榮譽檢察官」才好？建議「又老又男」的司改委員們，可直接徵召以下幾位：</p><p>第一位：國民男神金城武</p><p>雖是台日混血，但在台灣土生土長，擁有國際高知名度。高貴中帶點憂鬱冷酷的形象，無論飾演鬍子哥諸葛孔明，或在電影《太平輪》中扮演高中生均毫不違和，是所有婆媽姊妹們心中的「標準情人」。他本人私下相當樸實平凡且環保，連參與冰桶挑戰都使用除濕機的水展現愛護地球的一面，他的穿著打扮與行事作風，更媲美好萊塢一線男星基努．李維。</p><p>▲（圖／記者陳明仁攝）</p><p>第二位：十項全能彭于晏</p><p>澎湖出生、加拿大求學，個性好學向上、毅力驚人，曾為了電影《翻滾吧！阿信》而苦練體操，成功化身大隻佬，接著又挑戰拳擊與武打，於電影《激戰》、《黃飛鴻之英雄有夢》中展現俐落身手，之後又因演出電影《破風》而苦練單車，更因此成為環法自行車賽大中華區親善大使。能文能武的他，在愛情片《剩者為王》中則飾演愛慕舒淇的小鮮肉，健康陽光且認真敬業的形象，獲得30代女性一致好評。</p><p>第三位：貼心暖男陳柏霖</p><p>外號大仁哥，因與林依晨搭檔演出偶像劇《我可能不會愛你》而以暖男形象走紅亞洲。精通6種語言，日前因與韓國人氣女星宋智孝在綜藝節目《我們相愛吧》中大談姊弟戀而在韓國人氣大漲，擁有大批日、韓粉絲。</p><p>第四位：台灣球王陽岱鋼</p><p>阿美族的旅日棒球選手，目前效力於日本職棒中央聯盟讀賣巨人隊。形象清新健康，愛家又顧家，還曾獲得美國時尚名牌相中，拍攝一系列帥翻天的秋裝，連綠色恐龍毛衣都能輕鬆駕馭！（PS.這件林依晨也很愛！）</p><p>第五位：桌球王子江宏傑</p><p>因其妻為日本桌球名將福原愛而在台、中、日擁有超高知名度。個性溫柔體貼，才華洋溢，自己還設計了一款獨一無二的桌球婚戒送給妻子；為了滿足她的公主夢，還選在東京迪士尼舉辦婚禮，讓所有女性同胞羨慕不已。繼今年初擔任台北燈節代言人後，日前再獲農委會邀請，於日本東京食品展擔任台灣農產大使，還親自下廚拍攝短片推銷「愛的台灣味」，人帥又會做菜，還有豐富的政府機關形象代言經驗，100分！</p><p>什麼？你說這些還不足以跟李敏鎬匹敵？嘖嘖嘖，還好我還有壓箱寶，只要他一出現，保證萬頭攢動。各、位、觀、眾，Ladies and Gentlemen：休傑克曼，Hugh Jackman！派出自稱「半個台灣人」的他，總能贏韓國了吧！</p><p>姑且不論「鬼島呆丸」的名言就是「懂得笑就不會恨了」或是「不期不待就沒有傷害」，而我個人則是認為：「對抗荒謬世界的唯一辦法就是比它更荒謬。」所以，與其責怪司改會議辦得亂糟糟，不如想想還有哪些事情是可以做得到的吧！</p><p>好文推薦</p><p>雅豊斯／老男人的司改，點解？</p><p>●雅豊斯，小女子也，無長無才，故號多德。好幻想，嗜善食，研人所不究之事，偶有心得，不亦樂乎。職業是律師，志業是作家，兼差是說書，首部長篇小說《律政女王：魔鬼圓舞曲》現正連載中。以上言論不代表本網立場。88論壇歡迎多元的聲音與觀點，來稿請寄：editor88@ettoday.net</p> #雅豊斯 #律師 #議事程序 #ETToday東森新聞雲 #2017-03-30
 
 # 鄭文龍
 ## backgrounds
@@ -2792,6 +2812,70 @@
 ### 2017/03/30 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170330/1087158/
 - <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170330/1087158/" target="_blank">【司改交鋒】鄭文龍：司法院會成為侏羅紀公園？</a></h2><p>鄭文龍／律師、陪審團協會創會理事長</p><p>由司法院長許宗力領軍的司改大戲，果然高潮迭起，花樣不斷翻新。首先，司改會議決議要讓司法院大法官採憲法訴願，讓司法院大法官變成第四審。這種司法改革決議，竟然獲得除了主席林子儀外的全數通過，令人捏一把冷汗。</p><p>司法的功能在於公正審判，公正審判要伴隨效率及迅速，且審判要科學、符合人性，並且可被信賴。因此公正的司法，其中一項要求就是迅速審判及效率，遲來的正義有時候已經不是正義。我國司法的問題，並不是沒有第四審，而是司法貪污、恐龍判決、干預審判及輿論審判等司法四病。但是非常遺憾的，這麼重要的司法四病不僅長期未獲處理，也不見這次司改國是會議認真討論。只利用張靜律師的司法除屎說在打轉，躲避真正的司法改革議題。</p><p>我國長期所採用的三級三審制度，基本上沒有大問題。我國現制的大問題是沒有將司法院、最高法院、最高行政法院、公懲會、大法官會議等五個最高級的機關及人員，如英國美國等先進國家，合併為一個最高法院。這種最高審判機關及官員的整併，才能節省國家有限的資源，並且達成迅速、有效、統一的審判，才能具體的保障人權，並有效解決國家機關間憲政的紛爭。但是，很遺憾的，司改國是會議卻避開了這麼重要的議題，反而走了一個錯誤的第四審。</p><p>現制的問題除了沒有解決最高法院的整併外，也在於沒有堅實的一審。案件正確與否的成敗，絕大多數取決於第一審。第一審是事實審，離案件發生的時間最近，取證較有可能，且證人的記憶最清新，理論上第一審最有可能接近事實。我國現在第一審的問題，諸如法官太年輕、沒有社會歷練，導致認定事實不易精準正確，現行的職權主義讓法官角色無法中立、現行訴訟制度違反集中迅速審理、言詞辯論審理及公開審判的規定。</p><p>我國現在的審判實務，雖然表面上有開庭，但實質上已經變相為書面審理、秘密審理、分散延宕審理。又因為未改革為當事人進行主義及陪審團審判，因此現行的證據法則不僅粗糙，律師也無適度的調查權讓案件事實呈現，因此也導致法官無法落實無罪推定原則，除了少數法官外，多數法官都以有罪推定為審判，因此冤案時有耳聞。</p><p>而具體的解決方法，應該在於將現行的第一審改造，尤其是採行陪審團制度，及改造我國的訴訟制度為當事人進行主義，並改造配套的證據法則及律師調查權等制度，讓第一審事實審的調查更加充實及正確，以公正正確的審判解決紛爭。才不致於落入現制的一審經常調查不清、審判不明等誤審問題，導致後面的二審、三審無法補救，讓案件於二、三審來來回回爭議不休的困境。</p><p>這種困境，並非讓司法院大法官介入就能解決。因此，讓大法官變成第四審，只是治絲益棼。</p><p>因為有了第四審，所有訴訟當事人更陷入不確定的狀態。讓已經勝訴的百分之九十九的當事人案件懸而未決，另外，也是讓極少數敗訴的當事人抱持著不切實際的上訴希望。因為大多數的上訴四審的案件也不會成功，所以對二造當事人都會是噩夢與災難。</p><p>另外，司改會議可能覺得要玩更大的。我國特有的恐龍法官制度，未見司法改革會議有何解決方案，前日的司法改革委員會又有一組決議要讓法學院的講師擔任論件計酬的兼差法官，這也讓外界瞠目結舌。台灣的司法一直被詬病為恐龍審判，這是因為我們的審判法官太年輕、沒有社會歷練、也未經社會驗證及肯定。這種以筆試用人的方式本就有問題，因而導致許多恐龍判決的問題。</p><p>現在司法改革會議不正本清源，採用諸如陪審團制度、從資深優秀律師選拔法官的方法，卻去走一個旁門走道的方法，採用所謂學者兼任法官的方法。這種變相的方法，並無法對症下藥解決恐龍判決。只是從一種恐龍品種，納入另外一種恐龍品種而已，結果是，司法院就等著變成侏羅紀公園，集合各種品種的恐龍。</p><p>法官選用的多元，本就是外國民主先進國家的常態，諸如英美52國所採用的陪審團制度，就是補助法官及解決司法四病的方法。而在美國不只是任命的法官，也有民選的法官制度。另外，在英國也大量採用素人法官（Magistrate)的制度。在英國，除了有陪審團審判制度外，也徵召二、三萬的素人法官，讓社會上有歷練的公民以三人合議庭的方式擔任三個月的短期法官，對於一年以下的刑案為審判。在英國有九成的刑案，就是由這種有歷練的社會士紳來補助法官的不足，絕對不是徵召同樣沒有豐富社會歷練的法學院講師來擔任法官。</p><p>總之，台灣司法改革的道路，應該是多參考已經成熟穩健的外國，如英美等國的訴訟制度，斷不可自己關起門來，想一套全世界獨創的怪制度。也要盡量避免學習不成熟且問題多多的二手仿冒品，例如日本的參審制及德國憲法訴願，都是二戰後實驗中的仿冒品，實際的效果有限也倍受批評。</p><p>方法論上，我們應該學習外國經數百年驗證可行的審判制度。而不應該仿冒二手不成熟的仿冒品。尤其是我們實在禁不起兄弟所獨創的怪制度，來蹂躪我們百姓了。</p> #鄭文龍 #律師 #第四組 #人民參與審判 #蘋果日報 #2017-03-30
 
+# 李念祖
+## backgrounds
+- 學者
+
+## articles
+### 2017/03/31 GMT0+8:00 http://www.upmedia.mg/news_info.php?SerialNo=14491
+- <h2><a href="http://www.upmedia.mg/news_info.php?SerialNo=14491" target="_blank">李念祖專欄：憲法並未禁止大法官審查裁判違憲</a></h2><p>司法國是會議討論大法官應該審查裁判違憲的問題。忽然一個問題自天外飛來，大法官審查裁判違憲，違不違憲啊？回答這個疑問，其實需要解釋憲法；憲法沒有明文規定大法官不得審查裁判違憲，必須思索如何才能得出這樣的解釋。</p><p>解釋憲法不能望文生義</p><p>解釋憲法，起點依據是憲法的文本規定，稱為文義解釋。文義解釋，不能望文生義，隨意解釋。</p><p>譬如憲法在不止一處明文規定了司法院或大法官解釋憲法，一種望文生義的解釋，是據此認定只有司法院大法官需要解釋憲法，別的機關不必；甚者可能以為只有司法院大法官可以解釋憲法，別的機關不能。</p><p>又譬如憲法明文規定「法官須⋯依據法律獨立審判」，一種望文生義的解釋，是據此認定法官不必、甚或不得依據憲法審判。可是這兩種望文生義的解釋，都不合憲法法理。</p><p>不是只有大法官才能解釋憲法</p><p>每個憲法機關，掌握的都是憲法所交付的公權力；每位公職人員、每日行使公權力，都是在適用憲法，都受憲法約束，都有義務認識、解讀憲法，公職人員也就必須本著憲法忠誠，盡最大善意自行認知理解憲法，以執行其職務。公職人員，若是不能自行理解、解釋憲法，又如何遵守、適用憲法呢？如果說只有大法官可以解釋憲法，其他憲法交付公權力的公職人員不必甚或不得理解、解釋憲法，除了大法官還有誰會遵守憲法呢？</p><p>說是只有司法院大法官才可以解釋憲法，別的機關不可以也不必，其實也正是在解釋憲法。但這是一項錯誤的理解，錯誤之處，在於信意對憲法的規定做出反面解釋，看到憲法規定其一，就得出排除其他的結論。殊不知這樣的望文生義，為害甚大，會讓公職人員誤會而排斥理解憲法，其結果就是公職人員都不適用憲法，不理會憲法，實際上都進入不受憲法約束的狀態，怎麼可能成就法治國家？</p><p>憲法規定大法官解釋憲法，不是要使大法官獨占解釋權力，而是要在憲法機關解釋憲法出現爭議的時候，由大法官做出終局的判斷。</p><p>法官審判不能排斥憲法不用</p><p>同樣的，憲法說法官須依據法律獨立審判，並非法官只可依據法律審判，不必甚或不得依據憲法審判的意思。民國40年代，大法官曾經解釋，法官的裁判違憲，當事人得提出理由加以指摘，也就是法官必須遵守適用憲法裁判的意思（釋字第9號）；大法官又說，憲法規定法官須依據法律獨立審判，不是其他與憲法或法律不相牴觸的有效規章，均行排斥而不用的意思，解釋特別提到憲法，也就是要求法官裁判時，要適用憲法判斷法令規章是否合憲之後才能適用的意思（釋字第38號）。</p><p>法官若是自以為不必或不得適用憲法審判，其實亦在解釋憲法，卻也是犯了同樣錯誤的解釋。錯誤之處，也就在於對憲法的規定任意做反面解釋，看到憲法規定其一，就得出排除其他的結論。殊不知這樣望文生義，為害甚大，會讓法官自認不必甚或不能解釋憲法，其結果就是法官排斥適用憲法，不理會憲法，全不懂得適用憲法保障基本權利。法官審判時普遍排斥憲法不用、不習慣使用憲法保障權利的國家，就還不能算是法治國家。</p><p>為何要請大法官審查裁判違憲</p><p>司改會議為什麼會有大法官應該審查法官裁判違憲的提議呢？原因無他，包括最高行政法院與最高法院在內的各級法院之中，審判時經常具有憲法意識，確保法律解釋能夠符合憲法要求，而足從保障當事人基本權利的法官，其實是極少數。大法官說，裁判違憲的時候，當事人可以提出上訴加以爭執，可是數十年來，又數得出幾個上級法院認為下級法院裁判違憲的例子呢？蒼白的紀錄，不就是法官審判不用憲法的天然證明？</p><p>憲法是約束政府的法，法官在裁判中經常運用憲法解釋法律，告訴政府如何尊重平民的權利，根本不會經常需要勞動大法官釋憲。有趣的是，法官們平日不肯用憲法審判，當人們想請大法官幫忙的時候，卻忽然想起憲法來了，問道：大法官審查裁判是否違憲，會不會合憲啊？像這樣的憲法意識，如果是用來保護訴訟當事人的權利那就對了。</p><p>憲法禁止大法官審查裁判違憲？</p><p>司改會議中提出來的一個論據，是釋字第553號解釋中有一段話，「衡諸憲法設立釋憲制度之本旨，係授予釋憲機關從事規範審查權限（參照憲法第78條），除由大法官組成之憲法法庭審理政黨違憲解散事項外（參照憲法增修條文第5條第4項），尚不及於具體處分違憲或違法之審理（本院釋字第527號解釋理由書參照）」，用來論證憲法禁止大法官審查裁判是否違憲。這則解釋其實是在處理中央與地方憲法爭議的違憲審查範圍，若是可從這段話推演出來憲法禁止大法官審查裁判違憲，那是一種不當連結。或許可有一比，好像是先塞了一段話在大法官嘴裏，再藉大法官之名，硬塞一段話到憲法之中。</p><p>憲法授予大法官解釋憲法，從事規範審查，而不及於具體行政處分的違憲審查，是在說明憲法並未明文要求大法官必須審查行政處分的違憲事項，這豈能與憲法「禁止」大法官審查行政處分劃上等號？再要從憲法禁止大法官審查行政處分推論出憲法禁止大法官審查裁判違憲，那就離譜了。大法官是法官，應該獨立審判，本有憲法80條的適用；憲法設置大法官解釋憲法，就是授權大法官行使憲法裁判終審權的意思；如要得出憲法禁止大法官行使審判權審查法官裁判違憲，是與憲法完全相悖的說法，不是正確的解釋。所犯的錯誤還是一樣，以為憲法沒有明文寫出來的部分就是禁止的意思，又是任意在做反面解釋了。</p><p>憲法有什麼理由如此禁止呢？</p><p>不贊成大法官審查裁判違憲，是一回事；論證憲法禁止大法官審查裁判違憲，是另一回事。要說憲法禁止大法官審查裁判違憲，應該交待憲法如此設限的理由，不能望文生義，想當然耳，無限上綱。反對者主要的反對理由是大法官審查裁判違憲，將成為第四審，但這不能構成憲法上的反對理由，因為司法的審級安排是由立法院決定的事務，不是憲法的規定。如要避免大法官成為第四審，修正相關組織與程序立法，改成第二審、第三審都可以，怎麼說成是違憲呢？</p><p>現今大法官從事的主要是規範審查，容許當事人聲請大法官解釋最高法院裁判所適用的法律違憲。大法官一旦解釋法律違憲，適用違憲法律的法院裁判難道不會隨之違憲嗎？在同樣一個案子裡，憲法有什麼理由要求大法官審理法律是否違憲，卻禁止大法官審理裁判違憲呢？</p><p>大法官審判法院裁判違憲才合憲</p><p>可別忘了，民國90年10月5日，大法官曾經解釋（釋字530號解釋），憲法規定司法院應該是最高審判機關，現在的司法院卻不是一個真正的審判機關，應該要在兩年內檢討修正相關組織立法，使得司法院成為不折不扣的最高審判機關，才符憲政體制。解釋做成之後，現已時隔超過15年，違憲的司法院組織立法迄未修改，主管修法提案的司法院有沒有責任呢？司法院大法官不只是要抽象解釋憲法，還要負起審判法院裁判違憲的責任，才能符合司法院做為最高審判機關的要求。進行司法改革，正是要實現大法官解釋的憲法意旨，沒有道理反過來質疑違憲。</p><p>憲法禁止大法官審查裁判違憲？當然沒有禁止！反倒是大法官用憲法裁判審查法院裁判違憲，才能真正符合憲法的意旨。論者若是心中有疑，應該仔細讀讀釋字第530號解釋，這才是直接相關而能夠回答問題的解釋，釋字第553號解釋，其實並不相干，就不必牽拖了。</p><p>【延伸閱讀】</p><p>李念祖專欄：釋憲的正當程序應該列入司法改革的要項</p><p>【熱門影片推薦】</p><p>●【影片】恐有湮滅罪證之嫌 朴槿惠31日凌晨遭收押</p><p>●【影片】威脅不斷來襲 阿富汗計劃擴編特種部隊</p><p>上報</p><p>上報熱門圈</p><p>上報評論圈</p> #李念祖 #學者 #第二組 #憲法訴願 #上報 #2017-03-31
+
+# 林青弘
+## backgrounds
+- 其他
+
+## articles
+### 2017/03/31 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170331/1088311/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170331/1088311/" target="_blank">【司改交鋒】林青弘專欄：語言霸凌無罪 司法大「便」革</a></h2><p>林青弘／自由作家</p><p>司法改革國是會議第五分組昨討論「微罪除罪化」等議題，針對妨害名譽罪做成「除罪化」的決議。第五分組的決議不代表既定的國家刑事政策，立法院是否通過此項決議，尚有討論空間。妨害名譽罪是否除罪化，往後僅能依循民事不法求償，這還有很多爭執，不是第五分組決議後就定案。</p><p>《刑法》上的妨害名譽罪，其實分為「公然侮辱罪」、「加重公然侮辱罪」、「誹謗罪」與「加重誹謗罪」。第五分組以微罪(最重本刑二年以下有期徒刑)、濫訴嚴重、起訴少可和解、無人入獄等理由作為除罪化訴求，恐怕此項決議只是便宜行事，淪為司法大「便」革，毫無邏輯也無正當性。</p><p>一、微罪不是除罪正當理由，刑罰權不限於重罪</p><p>《憲法》並沒有明文限縮國家刑罰權，刑事政策若要排除最重本刑二年以下有期徒刑之罪名，立法者為了討好人民，修法把最重本刑提高為三年，豈不是可以規避「微罪」這個汙名標籤？</p><p>再者，最重本刑二年有期徒刑以下的罪名很多，例如「洩漏交付國防秘密罪」的預備犯與陰謀犯、「公務員過失洩漏交付國防秘密罪」、「剌探搜集國防秘密罪」的預備犯與陰謀犯、「不法侵入或留滯軍用處所罪」、「違背中立命令罪」、「侮辱外國旗章罪」、「違法行刑罪」過失犯、「洩漏國防以外之秘密罪」過失犯與非公務員犯、「妨害考試罪」、「污損封印、查封標示或違背其效力罪」、「侮辱公務員公署罪」、「侵害文告罪」、「妨害投票秩序罪」、「妨害投票秘密罪」、「公然聚眾施強暴脅迫罪」、「恐嚇公眾罪」、「妨害合法集會罪」、「煽惑他人犯罪或違背法令罪」、「挑唆包攬訴訟罪」、「侮辱國旗國徽及國父遺像罪」、「脫逃罪」、「藏匿人犯或使之隱避、頂替罪」、「湮滅刑事證據罪」、「未指定犯人誣告罪」、「公然猥褻罪」、「散布、販賣猥褻物品及製造持有罪」、「通姦罪」、「侮辱宗教建築物或紀念場所罪、妨害祭禮罪」、「普通賭博罪」、「過失致死罪」、「義憤傷害罪」、「加暴行於直系血親尊親屬罪」、「過失傷害罪」等等。</p><p>若僅以告訴乃論之罪、非告訴乃論之罪區別，單以同為告訴乃論之罪的「過失傷害罪」來比較，同樣都可金錢賠償，為何妨害名譽的罪責部分要除罪，過失傷害罪卻不討論除罪？這是什麼樣的除罪邏輯？刑責制定上，已經把損害個人法益的罪名制定比較輕的刑罰，若要因為只能告訴乃論，就要把微罪再進一步除罪化，這是不是對於平民百姓的告訴人嚴重歧視，不公平訴訟對待？</p><p>二、微罪除罪不能減少故意濫訴</p><p>故意濫訴者，根本不在乎是否起訴或不起訴，更不在乎定罪與否，濫訴動機與濫訴目的相牽連，不去發現濫訴目的，不可能解決故意濫訴的嚴重性。一旦微罪除罪化，故意濫訴者提告罪名更會浮誇，提告藉口無限上綱，只要攀附重罪條款，濫訴案件豈不是依舊進入偵查程序，不當消耗司法資源？再者，檢察署案件減少了，以鄰為壑，案件轉移到法院民事庭、簡易庭，檢察官把法官當成犧牲品，這是不是司法大「便」革，把檢察官的「屎缺」丟給法官處理？</p><p>此外，起訴比率少不能與除罪相繩，否則濫權不追訴罪、濫權追訴罪的公訴案件趨近於零，豈不是也能比照除罪？和解撤告可以節省司法資源介入，不正視撤告的正面效用，反而將撤告視為除罪的藉口，為解決濫訴而製造更多問題，司改如此神邏輯，實在太天才。</p><p>三、忽視定紛止爭功能，誇大重罪刑罰權效用</p><p>看看酒駕入獄、吸毒成癮入獄等眾多個案，還能堅信入獄才能懲罰受刑人，監獄才能教化受刑人，並使其悔過遷善？告訴乃論之罪能夠依法撤回告訴，旨在鼓勵兩造以刑罰之外的方法解決紛爭，如果沒有刑罰作為前提基石，定紛止爭無從發揮。</p><p>車禍過失而傷人，在毫無刑責約束時，肇事者明知只有民事不法的賠償，何必早日付錢認錯？讓官司在法院慢慢耗，即便判決要付出5%年利息，最後要付錢還是債權憑證了事，依舊未定在天，何必急著和解與賠償？過度強調「以刑逼民」的壞處，同時也會過度輕視「以刑逼民」的好處。若不是刑責作為金錢賠償的驅力與壓力，在人性自由發揮之下，誰會正視錯誤，甘願賠償了事？反正都要賠錢，讓民事法院消耗被害者的精神與時間，又有何妨？把「以刑逼民」汙名化而要堅持微罪除罪，這又是另一種廢死的謬誤。</p><p>如果妨害名譽毫無罪責，可以想像語言暴力更加嚴重。以後動口不動手，反正只是賠錢沒有刑罰，語言霸凌會不會更無所忌憚與囂張狂妄？國家刑罰若對惡言惡語的霸凌勢力棄權退讓，失控的司改，真的就是大「便」革。</p><p>更多林青弘文章</p> #林青弘 #其他 #第五組 #妨礙名譽除罪 #蘋果日報 #2017-03-31
+
+# 林臻嫺
+## backgrounds
+- 法官
+
+## articles
+### 2017/03/31 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170331/1087924/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170331/1087924/" target="_blank">【司改交鋒】林臻嫺專欄：夢中情人的陪審怕只在好萊塢</a></h2><p>林臻嫺／台南地方法院法官</p><p>上周六司改會議第四組針對陪審參審展開激烈爭辯，有論者比喻陪審制就像是「夢中情人」般，筆者認為陪審制度，既能讓法官成為單純指揮訴訟的中立者，且無須再絞盡腦汁長篇大論撰寫不白話的判決理由，且施行的成本也無須法官來煩惱，確屬夢中情人無誤。</p><p>但怕陪審員，也只是人，不是神！能保證由陪審員來審判，就不會出錯，就不會冤獄嗎？美國學者曾指出，陪審團需要的「一致決」，在認定分歧的點上，需要更多的妥協與讓步，更容易造成冤獄。另參酌美國在1987年的Tanner v. United States (483 U.S. 107,1987)案中，即曾發生過該案之陪審員有「行為不檢」（misconduct），在審判及評議過程當中，不僅有喝酒、還施用毒品，故被告在遭該陪審團認定有最後，律師主張原陪審團評議當時，已有部分陪審員因飲酒吸毒而呈「不適任（incompetence）」狀態，故認判決無效，要求重審（new  trial）。</p><p>但該案中，美國聯邦最高法院多數意見認為：陪審員在評議過程中，縱有行為不檢，但基於陪審制的「評議秘密原則」（jury deliberation secrecy）及因此衍生的「禁止（事後）彈劾原則」（no impeachment rule），原陪審團判決仍屬有效，不予重審救濟。</p><p>因多數意見認為，陪審制的「評議秘密原則」（jury deliberation secrecy）是陪審制的根本，如果准許判決後還可以讓被告去挖掘評議的過程，或揭露陪審員評議時的不當行為，來主張翻案，不僅危及陪審員的隱私、安全，且恐引發寒蟬效應，使陪審員在評議時無法自由、充分表示意見，又如事後公眾發現某些陪審員在評議時，根本可能是基於輕忽、草率，或僅憑直覺的態度，就判人生死，恐將根本損害到公眾對陪審制的信賴，故認為讓陪審制能繼續存在的價值，比起去揭發不適任陪審員，比起去保障被告受美國《憲法》第6修正案的權利，保持評議秘密更為重要！</p><p>然如同該案中由大法官Marshall等人共同提出的少數意見所質疑：……縱使陪審制在經過這樣的努力後能存活下來….。但如連上訴人請求法院再次審酌陪審員的行為舉止，究是否符合美憲第6修正案「無偏見陪審」（impartial jury）的最低標準，都不允許，縱使陪審制能活下來，到底還有何意義？因此，在Tanner案後，要求陪審團評議時要公開透明、不能再保持黑箱秘密的呼聲，也越來越強烈！</p><p>今年3月6日美國聯邦最高法院甫做出的 Pena-Rodriguez v. Colorado案，便標示這種轉變。該案中墨西哥裔的被告被指控性侵，在陪審團秘密評議完後，判決被告有罪，但被告律師主張在評議中，據說有陪審團成員說出具種族歧視與偏見的話語：「我想就是他做的，因為他是墨西哥人，墨西哥男人會為所欲為，只要他們想的話」，故認原陪審團判決無效，要求重審。</p><p>這次，美國聯邦最高法院同意了！此案的多數意見認為在美國，種族偏見難以根除，而陪審制的根基即「評議秘密原則」及「禁止彈劾原則」將使這問題更加惡化，如陪審員帶有種族偏見，卻不能讓其他陪審員於事後為被告作證舉發，是不合理的，故將此案撤銷發回原審，重新審酌，且認為如果繼續得讓陪審團以評議秘密原則來掩蓋保護，反才會讓美國公眾對於陪審制所代表的司法系統，喪失信心！</p><p>故倘摘掉評議秘密的面紗，仔細研究美國陪審真實發生過的實際案例，似乎也是千瘡百孔，那些主張陪審是「夢中情人」的，或許是好萊塢看太多了。還是，台灣引進陪審，我們陪審員的行為舉止一定會比美國的陪審員來得更高尚、理性？就不會像美國一樣，也可能造成不小比例的冤獄？絕不會出現「行為不檢」或「政治（藍綠）偏見歧視」嗎？</p><p>唉！有夢雖美，但夢醒後的現實真能如此？</p> #林臻嫺 #法官 #第四組 #人民參與審判 #蘋果日報 #2017-03-31
+
+# 蘇文俊
+## backgrounds
+- 律師
+
+## articles
+### 2017/03/31 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170331/1088222/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170331/1088222/" target="_blank">【司改交鋒】律師：妨礙名譽除罪化只是治標，建立付費的刑事訴訟程序才是治本</a></h2><p>蘇文俊／鼎宇律師事務所律師</p><p>司法改革委員會第五組昨天召開第三次會議，提議將妨礙名譽除罪化，此實在是讓司法改革總算有點曙光，各地檢署、法院因為妨礙名譽而導致積案沈重，在法律圈內早已不是新聞，尤其如果不起訴處分書如可像判決書一般公開，民眾就會知道我們的司法資源被如何的濫用，如果是單純謾罵或許尚有一點審理價值，但許多妨礙名譽案件都只是對話過程中，一句話讓對方不開心，就被告上法院，這類案件多如繁星，而導致這個狀況的真正元凶，其實並非妨礙名譽是否除罪化，而在於「地檢署互打免費」、「官司打到飽」，這才是導致司法機制遭濫用的真正原因。</p><p>而到底妨礙名譽罪指的是什麼，一般區分為公然侮辱罪與誹謗罪，而公然侮辱是指抽象的謾罵（如幹、白癡等言語），而誹謗罪是指具體的指摘（如某某人是小三、某某人收黑錢等），嚴格區分的話，前者只是讓人感到不快，而後者會導致名譽受損害，於報載內容中並未說明究竟是兩者均應除罪化，抑或僅是部分，而筆者的建議，應該將公然侮辱除罪化即可，因為公然侮辱其實說穿了，就只是讓人情緒不爽，這樣的事件實不應透過刑事手段解決，但誹謗罪損害的是名譽，名譽足以毀掉人的一生，因此仍有存在之必要。</p><p>其次，建立輕罪付費機制，如三年以下有期徒刑之罪或暴力犯罪以外之罪，制訂標準收費，由敗訴一方負擔，這樣方可有效防止濫訴，我想大家應該不知道靠濫訴賺錢的人有多少，日前新聞才報導，台南超商有名遊民，長期佔據超商座位，並藉故與其他顧客或店員發生衝突，而提告獲取和解金維生，又如濫訴名人張淑晶亦是如此。</p><p>最後，就是對於假性財產犯罪，放寬誣告罪成立要件。地檢署除了上開案件外，有很大宗的案件是來自假性財產犯罪，而假性財產犯罪是指什麼，目前最流行的大宗有三者，一個就是地下錢莊把地檢署當尋人中心的案件，只要債務人逃跑，地下錢莊就靠提告詐欺尋人。</p><p>另一種，類似第一種狀況，就是欠錢不還，但對方名下沒財產，乾脆用詐欺來逼對方出面處理，第三種就是檢察官往往會白眼翻到天靈蓋的，就是所謂的網路交易所導致的詐欺案，許多網友只要賣家寄貨太慢、一天聯絡不到人、或任何糾紛，一律先報警再說，這三類案件著實讓地檢署人仰馬翻，且基於地檢署內部管考機制，檢察官又不敢直接簽結，所以就只能把時間花在這類沒營養的案件上，但這樣案子都是不起訴居多，告訴人卻沒有一個受到任何處罰，原因在於我們的誣告罪只處罰說謊，卻不處罰「沒常識」，但往往許多沒常識的程度幾近故意，且如地下錢莊，已經多次用相同辦法尋人，實在已經難以讓人覺得只是單純沒常識的問題，地檢署應該建立相關機制來因應，而不能讓這些把地檢署當便利商店的人不付出任何代價，這樣只會拖垮司法資源，受害的也是全民。</p> #蘇文俊 #律師 #第五組 #妨礙名譽除罪 #蘋果日報 #2017-03-31
+
+# 魏偕峯
+## backgrounds
+- 檢察官
+
+## articles
+### 2017/03/31 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170331/1087912/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170331/1087912/" target="_blank">【司改交鋒】檢察官：連五月天也難逃的司法濫訴</a></h2><p>連五月天也難逃的司法濫訴──避免濫訴之司法有償性（使用者付費）</p><p>魏偕峯／雲林地檢署檢察官</p><p>日前剛發生1位歌迷將五月天在《自傳》專輯內某歌曲之「刻意留白」，誤會成產品瑕疵，而一口氣提告五月天及相信音樂董事長等6名被告涉嫌詐欺之案件。而發生此種讓人傻眼之濫訴案件，正也是目前眾多司法官不斷在反應案件濫訴頻繁、負擔過重之問題，一直無法有效杜絕，導致於一部分時間及精力消耗在濫訴或輕微案件，無法精緻偵查或審判。</p><p>而法務部目前正研議中之「副檢察官制度」之立意雖良善，惟受限於行政機關員額控管及政府財政困難等問題，想要大幅擴充司法人力亦非易事；又雖有法界人士提出「微罪告訴轉自訴」，惟因民眾沒有與警檢一樣之調查及偵查權限，在證據蒐集上會出現相當的難度，貿然施行，恐會過度影響民眾之訴訟權；至於現階段若採用將微罪結案之權限轉交由警方來處理之模式，則恐警方尚難抵擋政治性質關說之壓力，易生特權事件，且更加重警方之工作負擔。</p><p>因此可考慮仿照大禹治水係用疏導疏通之方式，逐步建立及引導人民「司法有償性(使用者付費)」之概念，排除濫訴，讓人民「慎重」行使其訴訟權，但仍可考慮如後所述之例外規定，兼顧公益及弱勢人民之權益。</p><p>建議方案一：就一部分案件(告訴乃論之罪、個人財產法益)，修法擴大「告訴之強制律師代理制度」</p><p>提出告訴，原則上需委任律師(但可考慮例外排除：中低收入戶、身心障礙人士、原住民、或報稅資料之年收入達一定金額以下者等人則仍可不委任律師即提告；或者擴大法律扶助之範圍，免費或減收費用，幫助前述弱勢人民委任律師)。</p><p>此方案的優點為讓具法律專業之律師來做為濫訴案件或輕微案件之攔沙壩，讓不必要之糾紛不用進入偵審階段，節省司法資源。且此方案亦可擴大律師案源，解決目前每年律師錄取人數約達千人之市場飽和困境，並讓律師界能有更多為人民服務之空間。因此可考慮搭配修正律師法等相關法律，要求律師每年須提供一定時數之免費公益法律服務，提供予前述弱勢人民或供法律扶助基金會安排，違反者有一定罰則或處罰規定，甚而為避免律師濫用「告訴之強制律師代理制度」，可訂定每年或幾年內有發生達幾件濫訴代理之情事時，違反者亦有一定罰則或處罰規定。</p><p>至於要在「何階段(在警局申告時？在向地檢申告時？地檢收案時？檢察官結案前？)」限制人民要採「告訴之強制律師代理制度」，則可再研議。</p><p>建議方案二：仿效民事訴訟制度，就一部分案件(告訴乃論之罪、個人財產法益)，修法擴大「告訴前之強制調解制度」</p><p>無論是採用維持現行之鄉鎮市調解委員會進行調解，或考慮修訂相關法規，將律師納為調解之參與者(或調解委員)，或將律師事務所納入調解處所。即人民於提出刑事告訴前，須先進行強制調解制度，並於調解不成立後，警檢始得受理偵辦。至於「告訴前之強制調解制度」與告訴期間是否逾期之相關問題，則可再研議。</p><p>綜上，筆者較傾向採方案一。試舉一例言之，台北市自2000年實施垃圾隨袋收費計劃後，2006年的垃圾較歷史最高年減量達50.74%，同理，就一部分案件，司法有償性(使用者付費)之概念若能落實，而從司法案件之源頭來調控，即可將濫訴案件或輕微案件降低，進而較易達成精緻偵查或審判之目的，因為司法官與一般人民一樣，一天只有24小時能努力。</p> #魏偕峯 #檢察官 #司法濫訴 #蘋果日報 #2017-03-31
+
+# 許仁碩
+## backgrounds
+- 其他
+
+## articles
+### 2017/03/31 GMT0+8:00 https://opinion.udn.com/opinion/story/10004/2376924
+- <h2><a href="https://opinion.udn.com/opinion/story/10004/2376924" target="_blank">警察微罪處分權，不應當作司法過勞解藥</a></h2><p>報載內政部將在司改國是會議上，提案賦予警察「微罪處分權」，提早由警察終結微罪案件，達成當事人、警察、檢察官與法官的「四贏」。</p><p>對於「微罪處分權」的實際內涵為何，內政部雖尚未對外發表，若參照學界主要引用之日本法定義，乃是指原本警察在刑事偵查中，均須將所有嫌疑人移送檢察官。但作為例外，若警察認定該案件為由檢察機關事前指定條件的特定微罪事件，則可以不移送結案，僅在事後向檢察官報告即可。</p><p>然而，天下無白吃的午餐，自然也沒有無代價的改革。此一制度究竟是否如內政部所言，是檢警審嚴重過勞之下，百利而無一害的靈丹？</p><p>尚待補足的刑法與刑事政策觀點</p><p>從內政部的說法，以及司改國是會議的相關討論及投書中可以得知，推行微罪處分權的主要理由，在於解決司法人員的過勞問題，也讓當事人不需跑地檢署與法院。對於警察，亦可提升警察專業素養與威信。</p><p>然而，受處分者即便免於刑罰與未來訟累，「犯罪」標籤對其社會關係與名譽上的傷害，以及民眾普遍對「案底」的恐懼，仍並非毫無損害。而司法眼中茫茫案海中之一粟，對被害人而言卻可能是人生中之重大事件。因此處分的雖是微罪，其影響卻未必微小，仍需慎重以待。</p><p>針對微罪問題，從過往的不起訴、緩起訴，到這次的處分權，都涉及可罰違法性相關的論爭，以及在訴訟法上，關於訴訟經濟與程序保障上的權衡問題。這些考量並非單以節省時間費用即可略過，否則，直接復活戰前日本直接讓警察判決輕罪事件的犯罪即決制，恐怕是最省時省力的了。</p><p>另外從刑事政策角度觀之，台灣對於特定社會問題，對策均是擴張並加重刑罰的使用範圍，並加強警察相關勤務，例如酒駕，就是要求警察廣泛臨檢、積極追車，並降低基準值，擴大公共危險罪的適用。更廣義而言，尚有處罰近百種違序行為之社會秩序維護法，需勞動警察或法院裁罰。</p><p>若此一方針不變，人力亦不變，則再怎麼擴張微罪處分以節流，在持續開源下，對過勞問題，恐怕均是治標不治本，或是僅是將過勞的人從檢察官，換成警官罷了。</p><p>警察教育與人事對微罪處分的影響</p><p>對於目前專屬於檢察官的微罪處分權是否合適，同時警察，警察機關的專業性與獨立性是否足夠等問題，亦為許多論者所關注。支持者認為，警察大學提供了充分的法學教育，加上民調顯示多數民眾信賴警察，顯然無不適任之問題。</p><p>然而，民調高並不代表警察是萬能的，特定職權所需之專業與獨立性也不會隨著職權創設，而一夕憑空而生，仍須就個別制度進行討論。</p><p>首先，警察確實在許多偵查所需技巧與經驗上，勝過以法學教育為主軸的檢察官。但微罪處分涉及實體法律的解釋適用，而警察法學教育的主軸，至今乃是環繞著偵查需求，例如先前對於警察特考加考行政法與刑事法，即有許多警界人士以「無關警察維護治安、打擊犯罪專業」為由反對。顯然警察所受訓練與微罪處分所需之能力間，存在落差。</p><p>進一步言，微罪處分在近年的發展當中，其面向變得更加多重。例如相較於傳統上針對出獄後階段之更生保護，已有將相關社福設施擴及受微罪處分之人之嘗試，以求防微杜漸。此外，如何運用微罪處分當中的附帶條件，促進修復性司法的實踐，亦是重要課題。當中所要求的專業內涵，又變得更加複雜。</p><p>其次，微罪處分未有刑罰，並不代表能隨意入人於罪，因此檢察官有客觀性義務，需同時注意對被告利與不利之證據，以維護被告人權。但警察所受之訓練，面對當事人，比起客觀性，更重視積極懷疑、調查。例如在日前的盤查爭議中，相對於自釋字五三五號出發的法律觀點，就有許多警界人士主張，只要有藉由盤查發現犯罪的可能，即不應加以限制。這反映出在警察被要求以打擊犯罪為重的考量之下，容易調降人權之重要性，要將人權保障貫徹到第一線，並非想像中容易。</p><p>在台灣的警察教育中，相當強調「服從」，比起堅持專業獨立判斷，更傾向培養軍隊般如臂使指的集體性格。但微罪處分乃是要求個別專業人員的客觀獨立判斷，即便與上級見解不同，亦應依法裁處。</p><p>可能會影響微罪處分所需之獨立性的，不僅是強調服從的警察教育而已，還有作為人事核心的績效制度。目前的警察績效制度，在目標規劃上可見缺乏實證依據，因而出現脫離現實的問題，例如要求隔年同一時期的案件數成長、在特定期間要求大量的護鈔等為民服務項目、或是追求轄區案件發破率突破百分之一百等等。</p><p>在上有政策，下有對策下，造成了一些扭曲現象：例如延遲移送，以滿足專案期間對特定案件件數的要求；要求大量的為民服務，不勝負荷下只好作假資料等等。倘若微罪處分的處分率或件數，也按照一貫的邏輯來操作的話，無論是要求提高或壓低，均會使負責員警基於績效壓力，而被迫扭曲法律上之判斷，有失對人民訴訟權之保障。</p><p>警察主體性與課責之關係</p><p>台灣警界長年以來，皆有訴求「偵查雙主體」的呼聲，希望從檢察官為偵查主體，警察接受檢察官指揮的定位，改為警察與檢察官為平起平坐的地位。</p><p>在此並不擬進行偵察雙主體之詳細制度討論，但值得注意的是，肯定偵查雙主體理由之一，乃是認為將檢察官與警察脫鉤後，將有助於檢察官能以較客觀立場，有效節制警察的違法偵查行為。</p><p>也就是說，即便警察成為獨立的偵查主體，並不因此得免於課責與制衡，獨立行使職權，不代表免於制衡。就如法官與檢察官各自獨立，但雙方之間仍存在制衡關係一樣。當某一公務機關新增或擴張職權，就應有相應的課則與制衡作為配套，避免濫權。</p><p>然而在倡議偵查雙主體或微罪處分權，擴張警察職權的部分論述當中，非但未思考配套的課責機制，反而主張應該要同時放鬆對警察權力的節制，以確保新權力行使的效率與警察的主體性。</p><p>而在微罪處分權的課責機制方面，部分論者認為，以檢察官即能能夠充分監督警察的微罪處分。但考量在現狀之下，透過檢察官對警察行為的課責效果即已相當不彰，又加上前述警界以偵查雙主體論，亟欲擺脫檢察官制衡之主張，可見在微罪處分權方面之課責機制，應如何設計方有實效，亦非簡單的課題。</p><p>認真對待微罪處分</p><p>綜上所述，若是僅僅考量要如何避免檢察官過勞，而推動警察微罪處分權，則不免掛一漏萬。過勞問題尚有其他根源待解，賦予警察微罪處分權亦需更周延之考量。除了已有論者提及之檢察官在處分基準與效力上介入，以及辯護人的角色之外，本文進一步提出尚待解決的課題還包括了，充分之刑事法及刑事政策論據、警察教育內容及績效制度改革、以及相應之制衡課責機制，均不可少。</p><p>單單移植所謂「先進國」之法條，顯然不夠充分，如何切實掌握本土病灶，並明辨各國制度優劣，開出最適合台灣的處方，尚有賴全體參與司改之法律人及非法律人集思廣益。</p> #許仁碩 #其他 #微罪 #UDN鳴人堂 #2017-03-31
+
+# 高榮志
+## backgrounds
+- 律師
+
+## articles
+### 2017/04/01 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170401/1088949/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170401/1088949/" target="_blank">【司改交鋒】高榮志：追求陪審夢中情人也要務實</a></h2><p>高榮志／律師、民間司改會執行長</p><p>林臻嫺法官認為陪審制夢中情人只在好萊塢，並舉了現實的美國案例反駁。然而，把陪審制說成夢中情人是比喻、不是神諭，畢竟，長大後的我們都知道，就算和夢中情人在一起，也有不少需要務實磨合的地方，王子和公主並不會理所當然的過著快樂的日子。不管我們想學習美國的陪審制，或引進日本的參審制，都需要和本土的司法磨合好一陣子，才有可能「好好的在一起」。 </p><p>筆者在公聽會的主張，只有一個重點：我不代言陪審制，也不推銷參審制。因為台灣沒有實作陪審或參審的實證經驗，因此只是很卑微的期待，希望兩種都可以試行看看。試行之後，再作最終的政策決定。如果囿於人力或物力的資源不足，只能試行一種，就建議試行陪審制，因為陪審制和我國現況的差異性最大、互補性最強，可能可以（在試行的範圍內）最大幅度地調整／衝擊現在的司法。 </p><p>當然，這些都只是「意見」，大家都可以質疑我只是「空口說白話」。不過，相同的批評都會回歸到批評者的身上，正因為我們沒有任何本土的經驗。司法院先前的政策是「觀審制」，模擬法庭是以此為前提，或許說不得準，或許同樣的統計或報告，也都能夠支持參審或陪審。民間司改會也做了6場陪審制，民間團體的人力物力有限，我們仍然覺得還很粗糙。</p><p>種種的批評都可能是對的。或許，台灣人民真的法治素養不足，評議時輕忽草率，僅憑直覺就判人生死。那麼，我們在試行時，就應該思考可以評量或觀察評議的方式，作為堅持或放棄陪審制的參考。甚至為了避免過度侵害人民權益，可以考慮不要從重罪開始。或許，台灣真的太小，媒體也太過發達，因此不能保有一個公平審判的環境。那麼，我們在試行後，就應該思考是要限制媒體報導的方式，還是應該放棄陪審制。也或許，陪審制帶來的變動太大，物力的成本我們可以控制案件量來節制，人才的培養卻非一蹴可幾。那麼，我們在試行後，就應該思考是要大力培養人才，還是要乾脆放棄，維持現制。 </p><p>這些質疑清單，可以再一直寫下去。事實上，關於各國制度優劣比較的ABC，各方已經討論了5年，真正值得在意的，是要何時、要如何踏出下一步？追求到了夢中情人，有可能是美夢成真，也可能是噩夢連連。只是，好萊塢如果真有什麼值得令人佩服之處，應該就是永遠在鼓勵人們，勇敢追尋自己的夢想。尤其是被眾人嘲笑的夢想。</p> #高榮志 #律師 #第四組 #人民參與審判 #蘋果日報 #2017-04-01
+
+# 楊永年
+## backgrounds
+- 學者
+
+## articles
+### 2017/04/01 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170401/1088644/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170401/1088644/" target="_blank">【司改交鋒】楊永年專欄：司法改革要改革什麼</a></h2><p>楊永年／成功大學政治系暨政經所教授、司改國是會議委員</p><p>很多人有疑問，司法改革究竟要改革什麼？回答這問題，首先得要了解，什麼是司法改革？作者認為，司法改革有二大內涵，第一是體系改革，第二是體制改革。此次標榜「全民的司改」，除了法律人，還邀請半數的「非法律人」參加司改。所以可推論，此次司法改革強調體制改革，並進一步期望透過體制改革，帶動體系改革。</p><p>但司法體制改革談何容易？因為司法體制與體系，係在目前的政治制度運作。除非能夠突破政治制度（框架），否則難以進行司改。但矛盾的是，現在正進行的是司法改革，而不是政治改革。於是這場司法改革，可能落入司法改革與政治改革複雜的糾葛之中。但司法體系同時嗅到「自己可能是被改革對象」，所以司法體系由上至下有如臨深淵之感。</p><p>就因為司法體系知道他們是「被改革的對象」，所以在這次司法改革國是會議中，提供絕佳的機會，讓司法官員能謙卑的傾聽「人民代表」的聲音。然長期形成的司法體系組織文化，就像羅馬不是一天造成，形成難以突破的僵局。又因司法改革沒有主軸，所以難以碰觸敏感議題。但設若敏感議題出現，會否發揮「改革」成效，則是另個議題。</p><p>就體系改革論述，其內涵是相關組織的改革，包括司法院的法院系統、法務部的檢察系統、法務部的矯正系統（含矯正署與保護司兩系統）、法務部調查局系統、內政部警政系統，而這還不包括背後龐大的外圍組織，例如更生團體、志工團體、民間戒毒與反毒機構、研究機關，以及配合特定任務的憲兵隊等。每個組織或系統各自既獨立又相關，不論針對哪個系統，都是相當大的議題。</p><p>就算針對某個特定組織進行改革，可能牽動整個司法體系不同組織系統間的（權力）平衡。假設藉由這次司法改革，增加或削弱某組織的權力，卻缺乏配套，會是相當危險的事。或者，如果司法改革聚焦在體系某組織權力的削弱或增加，將注定是「失敗」的改革。因為若「權力」改革變成焦點，司改追求的「公平正義」可能失焦，最終將只成點綴的裝飾品，甚至可能帶來司法「公平正義」災難。</p><p>因為對某些個人或機關組織而言，失去「權力」，可能連帶失去工作熱忱或士氣；對某些個人或組織而言，獲得「權力」，可能帶動濫權的發生。換言之，是否應該削權或擴權，不應該是司改會議討論或改革的重點。重點或焦點應該放在，社會期待的公平正義（體制建立）是否能夠達成。人民在意的是司法是否能讓司法偵查、起訴、審判，符合公平正義。因此，司法體制的改革如果沒有同步，司法體系的改革也難竟其功。</p><p>綜言之，透過這次司改會議，若能建立司法體制改革的主軸與共識，就屬成功。但接下來要有「10年」長期「作戰」打算，因為帶動的司法體系改革是大工程，必須設計配套，才能成就司法改革；或者，若能以反毒為主軸，就會是了不起的司法改革。</p> #楊永年 #學者 #過往司改失敗原因 #蘋果日報 #2017-04-01
+
 
 
 
@@ -2800,7 +2884,7 @@ ___
 <p>
 2017年2月起，總統府召開<a href="https://justice.president.gov.tw/" target="_blank">司法改革國是會議</a>，會議期間，媒體上出現大量司法制度相關投書，此為民間司改會所製作之投書整理。
 </p>
-<p>本投書整理更新時間：2017年03月30日 12:48:51</p>
+<p>本投書整理更新時間：2017年04月01日 09:47:14</p>
 <ul>
   <li><a href="https://www.jrf.org.tw/" target="_blank">民間司改會網站</a></li>
   <li><a href="http://fb.com/jrf.tw" target="_blank">民間司改會粉專</a></li>
@@ -2875,6 +2959,7 @@ ___
     - 郭瑜芳
     - 吳忻穎
     - 鍾曉亞
+    - 魏偕峯
   - 律師
     - 高榮志
     - 黃盈嘉
@@ -2935,6 +3020,7 @@ ___
     - 王鼎棫
     - 胡博硯
     - 李茂生
+    - 蘇永欽
   - 其他
     - 蔣念祖
     - 林瑋婷
@@ -3007,6 +3093,7 @@ ___
     - 何飛鵬
     - 鍾宏彬
     - 戴伸峰
+    - 許仁碩
 
 - 投書平台
   - 蘋果日報
@@ -3053,6 +3140,7 @@ ___
   - 司法官養成
   - 司法心理學
   - 司法救濟
+  - 司法濫訴
   - 司法獨立
   - 司法白話文
   - 司法科學
@@ -3060,7 +3148,6 @@ ___
   - 司法與人民關係
   - 司法資源浪費
   - 司法資訊公開
-  - 司法遭政治控制
   - 司法院審判機關化
   - 司法預算
   - 司訓所
@@ -3071,6 +3158,7 @@ ___
   - 大法官遴選
   - 大法庭
   - 妨害司法公正罪
+  - 妨礙名譽除罪
   - 審判金字塔化
   - 審檢分立
   - 強制律師代理
@@ -3138,6 +3226,7 @@ ___
   - 起訴書公開
   - 起訴門檻
   - 轉型正義
+  - 過往司改失敗原因
   - 違憲審查
   - 酒駕
   - 重刑化
@@ -3236,4 +3325,6 @@ ___
   - 2017-03-28
   - 2017-03-29
   - 2017-03-30
+  - 2017-03-31
+  - 2017-04-01
 
